Crash when adding a linked scene, then deleting it #57320

Closed
opened 2018-10-20 12:44:10 +02:00 by Mal Duffin · 3 comments
Member

System Information
Windows 10, NVidia 1070

Blender Version
Broken: 2.8 Alpha 2 8e3a680ebe

Short description of error
There is a crash relating to collections, according to the debug info in Visual Studio.

Exact steps for others to reproduce the error

  1. Start Blender
  2. Add a new scene, with Link Objects, Link Object Data, or Full Copy
  3. Delete the scene

You'll get a crash.

**System Information** Windows 10, NVidia 1070 **Blender Version** Broken: 2.8 Alpha 2 8e3a680ebe3 **Short description of error** There is a crash relating to collections, according to the debug info in Visual Studio. **Exact steps for others to reproduce the error** 1) Start Blender 2) Add a new scene, with Link Objects, Link Object Data, or Full Copy 3) Delete the scene You'll get a crash.
Author
Member

Added subscriber: @MalDuffin

Added subscriber: @MalDuffin
Bastien Montagne self-assigned this 2018-10-21 13:03:05 +02:00

This issue was referenced by 7756973b0c

This issue was referenced by 7756973b0c35c5759db240158717d0f5bf0f45dc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57320
No description provided.