Fix T57320: Crash when adding a linked scene, then deleting it.

You want to check collections (for NULL children) first, before you
actually go into those children collections checking for NULL objects...